--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </script>
     <script src="https://cdn.safelinku.com/js/sdk.js" async></script>
 
-    <!-- Tailwind CSS (CDN is fine for this setup to keep it simple) -->
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -43,8 +43,8 @@
     "react/": "https://esm.sh/react@^19.2.4/",
     "framer-motion": "https://esm.sh/framer-motion@^12.34.0",
     "react-player/": "https://esm.sh/react-player@^3.4.0/",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
   }
 }
 </script>
