--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
 </head>
   <body class="bg-[#050505] text-gray-200 antialiased overflow-x-hidden selection:bg-pink-500 selection:text-white">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
