--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
     "framer-motion": "https://esm.sh/framer-motion@^12.34.0",
-    "react-player/": "https://esm.sh/react-player@^3.4.0/",
+    "react-player": "https://esm.sh/react-player@^3.4.0",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
   }
