feat: Enhance movie viewing experience and integrate safelink
Refactor component structure and update data handling for a more dynamic and visually appealing movie application. Integrate SafelinkU for monetization and ad management.

- Introduced `actors` field to `Movie` type.
- Moved movie data to a dedicated `data/movies.ts` file and refactored `createMovie` helper.
- Improved `MovieCard` component with updated styling and animations.
- Enhanced layout with dynamic background effects and SafelinkU integration.
- Updated `index.html` to reflect changes in script loading.
- Replaced inline SafelinkU config in `index.html` with dynamic injection in `layout.tsx`.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </script>
     <script src="https://cdn.safelinku.com/js/sdk.js" async></script>
 
-    <!-- Tailwind CSS (CDN for quick styling) -->
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
