fix(ui): Update theme and icons for a cleaner look
Refactors the application's visual theme and default icons. Changes the background to a more dynamic rainbow gradient and updates the favicon and manifest icon to use a more standard Vite SVG icon and a different external icon respectively. This aims to modernize the app's appearance and ensure better compatibility with PWA features.

--- a/index.html
+++ b/index.html
@@ -3,31 +3,13 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://josanvin.github.io/josanvin/img/bioskop21.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="manifest" href="/manifest.json" />
-    
-    <!-- Primary Meta Tags -->
-    <title>BIOSKOP21 - Sini Ngopi Sambil Nonton Film Mantap</title>
-    <meta name="title" content="BIOSKOP21 - Sini Ngopi Sambil Nonton Film Mantap" />
-    <meta name="description" content="Premium Techno-Cyberpunk Movie Streaming Experience. Nonton film terbaru dengan kualitas mantap." />
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://bioskop21.vercel.app" />
-    <meta property="og:title" content="BIOSKOP21 - Sini Ngopi Sambil Nonton Film Mantap" />
-    <meta property="og:description" content="Streaming film premium dengan gaya cyberpunk. Sini ngopi sambil nonton film mantap!" />
-    <meta property="og:image" content="https://josanvin.github.io/josanvin/img/bioskop21.jpg" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://bioskop21.vercel.app" />
-    <meta property="twitter:title" content="BIOSKOP21 - Sini Ngopi Sambil Nonton Film Mantap" />
-    <meta property="twitter:description" content="Streaming film premium dengan gaya cyberpunk. Sini ngopi sambil nonton film mantap!" />
-    <meta property="twitter:image" content="https://josanvin.github.io/josanvin/img/bioskop21.jpg" />
+    <title>BIOSKOP21 - TECHNO STREAMING</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
