--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
     <meta property="og:url" content="https://bioskop21.vercel.app" />
     <meta property="og:title" content="BIOSKOP21 - Sini Ngopi Sambil Nonton Film Mantap" />
     <meta property="og:description" content="Streaming film premium dengan gaya cyberpunk. Sini ngopi sambil nonton film mantap!" />
-    <meta property="og:image" content="https://josanvin.github.io/josanvin/img/bioskop21.jpg" />
+    <meta property="og:image" content="https://josanvin.github.io/josanvin/img/bioskop21.jpg?v=1" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://bioskop21.vercel.app" />
     <meta property="twitter:title" content="BIOSKOP21 - Sini Ngopi Sambil Nonton Film Mantap" />
     <meta property="twitter:description" content="Streaming film premium dengan gaya cyberpunk. Sini ngopi sambil nonton film mantap!" />
-    <meta property="twitter:image" content="https://josanvin.github.io/josanvin/img/bioskop21.jpg" />
+    <meta property="twitter:image" content="https://josanvin.github.io/josanvin/img/bioskop21.jpg?v=1" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
